--- a/redbuilders/redbuilders2.html
+++ b/redbuilders/redbuilders2.html
@@ -407,19 +407,42 @@
 					<tr>
 						<td height="40"></td>
 					</tr>
+				</table>
+
+				<table cellspacing="0" cellpadding="0" border="0" width="595" style="background-color: #F42525;">
 					<tr>
-						<td align="center">
-							<a href="https://www.red.builders/" title="More project" target="_blank">
-								<img src="https://onlyketch.github.io/emails/redbuilders/btn-more.png" width="159" height="39" alt="Branch Place" style="display: block; border: 0;">
-							</a>
-						</td>
-					</tr>
-					<tr>
-						<td height="68"></td>
+						<tr>
+							<td height="40"></td>
+						</tr>
+						<tr>
+							<td style="text-align: center;">
+								<span style="color: #FFFFFF; font-family: 'Poppins', Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 21px;">
+									Thank you for choosing us. Our manager will contact<br>you soon find out the details of your priject and make the best offer<br>to make your dream come true!
+								</span>
+							</td>							
+						</tr>
+						<tr>
+							<td height="20"></td>
+						</tr>
+						<tr>
+							<td align="center">
+								<a href="https://www.red.builders/" title="More project" target="_blank">
+									<img src="https://onlyketch.github.io/emails/redbuilders/btn-more2.png" width="159" height="39" alt="Branch Place" style="display: block; border: 0;">
+								</a>
+							</td>							
+						</tr>
+						<tr>
+							<td height="50"></td>
+						</tr>
 					</tr>
 				</table>
 
 				<!-- footer -->
+				<table cellspacing="0" cellpadding="0" border="0" width="595" style="background-color: #262626;">
+					<tr>
+						<td height="20"></td>
+					</tr>
+				</table>
 
 				<table cellspacing="0" cellpadding="0" border="0" width="595" style="background-color: #262626;">
 					<tr>
